src/objects/Insight__c.object
<CustomObject>
    <description>Customer Insights into a trade opportunity.</description>
    <fields>
        <fullName>Goals__c</fullName>
        <description>A brief description of purpose of the Insight.</description>
        <inlineHelpText>A brief description of the goals of your Insight.  What is this about?  Why are you bringing this information together?  What do you hope to accomplish with this information?</inlineHelpText>
        <label>Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>A User-friendly name for the Board.</description>
        <inlineHelpText>Enter the name for your Board, which place to store a collection of research.</inlineHelpText>
        <label>Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>A description of the results of your Insight.</description>
        <inlineHelpText>The results of your Insight.  This should contain a summary of your findings and should relate back to your goals.</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Support_Name__c</fullName>
        <displayFormat>INSIGHT {DDYYMM}{0}</displayFormat>
        <label>Support Name</label>
        <type>AutoNumber</type>
    </fields>
    <label>Board</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Goals__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INSIGHT {DDYYMM}{0}</displayFormat>
        <label>Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Boards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>